@@ -183,14 +183,14 @@ dns_server_request_cb(struct evdns_server_request *req, void *data)
 		struct in_addr ans;
 		ans.s_addr = htonl(0xc0a80b0bUL); /* 192.168.11.11 */
 		if (req->questions[i]->type == EVDNS_TYPE_A &&
-			req->questions[i]->class == EVDNS_CLASS_INET &&
+			req->questions[i]->dns_question_class == EVDNS_CLASS_INET &&
 			!strcmp(req->questions[i]->name, "zz.example.com")) {
 			r = evdns_server_request_add_a_reply(req, "zz.example.com",
 												 1, &ans.s_addr, 12345);
 			if (r<0)
 				dns_ok = 0;
 		} else if (req->questions[i]->type == EVDNS_TYPE_AAAA &&
-				   req->questions[i]->class == EVDNS_CLASS_INET &&
+				   req->questions[i]->dns_question_class == EVDNS_CLASS_INET &&
 				   !strcmp(req->questions[i]->name, "zz.example.com")) {
 			char addr6[17] = "abcdefghijklmnop";
 			r = evdns_server_request_add_aaaa_reply(req, "zz.example.com",
@@ -198,7 +198,7 @@ dns_server_request_cb(struct evdns_server_request *req, void *data)
 			if (r<0)
 				dns_ok = 0;
 		} else if (req->questions[i]->type == EVDNS_TYPE_PTR &&
-				   req->questions[i]->class == EVDNS_CLASS_INET &&
+				   req->questions[i]->dns_question_class == EVDNS_CLASS_INET &&
 				   !strcmp(req->questions[i]->name, TEST_ARPA)) {
 			r = evdns_server_request_add_ptr_reply(req, NULL, TEST_ARPA,
 					   "ZZ.EXAMPLE.COM", 54321);
@@ -207,7 +207,7 @@ dns_server_request_cb(struct evdns_server_request *req, void *data)
 		} else {
 			fprintf(stdout, "Unexpected question %d %d \"%s\" ",
 					req->questions[i]->type,
-					req->questions[i]->class,
+					req->questions[i]->dns_question_class,
 					req->questions[i]->name);
 			dns_ok = 0;
 		}
